Fixed overflowing on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400, 800);
+
 figure.snip1104 {
   font-family: "Raleway", Arial, sans-serif;
   position: relative;
@@ -30,7 +31,9 @@ figure.snip1104 figcaption {
   bottom: 0;
   right: 0;
 }
-
+#overflowpage {
+  overflow-x: hidden;
+}
 figure.snip1104 h2 {
   position: absolute;
   left: 40px;
@@ -130,6 +133,7 @@ figure.snip1104.hover:before {
 .sentence {
   text-align: left;
   font-size: 4vmax;
+  white-space: nowrap;
 }
 
 .wrapper {
@@ -357,7 +361,9 @@ img::-moz-selection {
   overflow-x: hidden;
 }
 #mainNav .navbar-toggler {
+  white-space: nowrap;
   overflow-x: hidden;
+  overflow: hidden;
   font-size: 12px;
   right: 0;
   padding: 13px;
